--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "gulp-inject": "",
     "gulp-sequence": ""
   },
-  "author": "life(http://life.leanote.com)",
   "license": "GPL v2",
-  "bugs": {
-    "url": "https://github.com/leanote/leanote/issues"
+  "dependencies": {
+    "gulp-minify-css": "^1.2.4"
   }
 }
