--- a/conf/app.conf
+++ b/conf/app.conf
@@ -3,9 +3,9 @@
 #------------------------
 
 http.addr=0.0.0.0 # listen on all ip addresses
-http.port=9001
+http.port=9000
 
-site.url=http://localhost:9001 # or http://x.com:8080, http://www.xx.com:9000
+site.url=http://localhost:9000 # or http://x.com:8080, http://www.xx.com:9000
 
 # admin username
 adminUsername=admin
@@ -54,7 +54,7 @@ mode.dev=true
 results.pretty=true
 watch=true
 
-module.testrunner = github.com/revel/modules/testrunner
+module.testrunner = #github.com/revel/modules/testrunner
 
 log.trace.output = stderr
 log.info.output  = stderr
